.provarCaches/00D5f000005vwGkEAI/objects/rstkf__glpdexchrate__c.object
<CustomObject>
    <description>glpdexchrate</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__glpdexchrate_parent__r.rstkf__externalid__c &amp; &apos;_&apos; &amp;  rstkf__glpdexchrate_subsidiary__r.rstkf__externalid__c &amp; &apos;_&apos; &amp;  TEXT(rstkf__glpdexchrate_glyear__r.rstkf__glyear_year__c) &amp; &apos;_&apos; &amp;  TEXT(rstkf__glpdexchrate_period__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>formula_extid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glpdexchrate_balsheetrate__c</fullName>
        <label>Balance Sheet Rate</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glpdexchrate_balsheetsched__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Balance Sheet Rate Schedule</label>
        <referenceTo>rstkf__syforexschedno__c</referenceTo>
        <relationshipLabel>glpdexchrates</relationshipLabel>
        <relationshipName>glpdexchrates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glpdexchrate_daysinyear__c</fullName>
        <label>Days Averaged</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glpdexchrate_fromdate__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glpdexchrate_glyear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Effective Year</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipLabel>glpdexchrates</relationshipLabel>
        <relationshipName>glpdexchrates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glpdexchrate_glyearsub__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the subsidiary company&apos;s GLYEAR</inlineHelpText>
        <label>Effective Year on Subsidiary Calendar</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipLabel>glpdexchrates (Effective Year on Subsidiary Calendar)</relationshipLabel>
        <relationshipName>glpdexchrates1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glpdexchrate_pandlrate__c</fullName>
        <label>P &amp; L Rate</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glpdexchrate_parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>glpdexchrates</relationshipLabel>
        <relationshipName>glpdexchrates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glpdexchrate_parentcurr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Company Currency</label>
        <referenceTo>rstk__sycurr__c</referenceTo>
        <relationshipLabel>glpdexchrates</relationshipLabel>
        <relationshipName>glpdexchrates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glpdexchrate_period__c</fullName>
        <label>Effective Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glpdexchrate_periodsub__c</fullName>
        <inlineHelpText>This is the subsidiary company&apos;s period</inlineHelpText>
        <label>Effective Period on Subsidiary Calendar</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glpdexchrate_plratemethod__c</fullName>
        <inlineHelpText>P &amp; L Rate Method</inlineHelpText>
        <label>P &amp; L Rate Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Year to Date Average</fullName>
                </value>
                <value>
                    <fullName>Monthly Average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glpdexchrate_ratesum__c</fullName>
        <label>Sum of the Daily Rates</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glpdexchrate_subsidiary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subsidiary Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>glpdexchrates (Subsidiary Company)</relationshipLabel>
        <relationshipName>glpdexchrates1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glpdexchrate_subsidiarycurr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subsidiary Company Currency</label>
        <referenceTo>rstk__sycurr__c</referenceTo>
        <relationshipLabel>glpdexchrates (Subsidiary Company Currency)</relationshipLabel>
        <relationshipName>glpdexchrates1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glpdexchrate_thrudate__c</fullName>
        <label>Through Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glpdexchrate_xlatemethod__c</fullName>
        <label>Translation Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Step-by-Step</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>glpdexchrate</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>glpdexchrates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>